--- a/css/main.css
+++ b/css/main.css
@@ -2,19 +2,27 @@ body,html{
 	margin: 0;
 	padding:0;
 }
+.content{
+	overflow: hidden;
+}
 #index_img {
-position: absolute;
-top: 0px;
-left: 0px;
-z-index: 1;
--webkit-box-shadow: 0px 0px 20px 0px #707070;
--moz-box-shadow: 0px 0px 20px 0px #707070;
-box-shadow: 0px 0px 20px 0px #707070;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 2;
+	
 }
 
-#buttom_img {
-position: absolute;
-top: 0px;
-left: 0px;
-z-index: 2;
+#bottom_img {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 1;
+}
+#next_img{
+	display: none;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 1;
 }
