--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,14 @@ body,html{
 .text{
 	width: 100%;
 }
-
+.ads{
+	display: none;
+	position: absolute;
+	right:2%;
+	top: 13%;
+	max-width: 500px;
+	width: 40%;
+}
 #tip1_01{
 	width: 100%;
 	bottom: 0px;
@@ -43,7 +50,7 @@ body,html{
 	display: none;
 	/*width: 50%;
 	top:50%;*/
-	bottom: 20px;
+	bottom: 6%;
 }
 /*文字*/
 #tip1_03{
@@ -71,10 +78,11 @@ body,html{
 /*小妹妹*/
 #tip2_02{
 	display: none;
-	/*width: 50%;
-	top:50%;*/
-	right: 0px;
-	bottom: 20px;
+	max-width: 900px;
+	width: 80%;
+	/*top:50%;*/
+	right: 2%;
+	bottom: 6%;
 }
 /*文字*/
 #tip2_03{
@@ -102,10 +110,11 @@ body,html{
 /*小妹妹*/
 #tip3_02{
 	display: none;
-	/*width: 50%;
-	top:50%;*/
+	max-width: 900px;
+	width: 80%;
+	/*top:50%;*/
 	right: 0px;
-	bottom: 20px;
+	bottom: 6%;
 }
 /*文字*/
 #tip3_03{
@@ -134,10 +143,11 @@ body,html{
 /*小妹妹*/
 #tip4_02{
 	display: none;
-	/*width: 50%;
-	top:50%;*/
+	max-width: 900px;
+	width: 80%;
+	/*top:50%;*/
 	right: 0px;
-	bottom: 20px;
+	bottom: 6%;
 }
 /*文字*/
 #tip4_03{
@@ -166,10 +176,11 @@ body,html{
 /*小妹妹*/
 #tip5_02{
 	display: none;
-	/*width: 50%;
-	top:50%;*/
+	max-width: 900px;
+	width: 80%;
+	/*top:50%;*/
 	
-	bottom: 20px;
+	bottom: 6%;
 }
 /*文字*/
 #tip5_03{
