--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,27 @@
 body,html{
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding:0;
 }
 .content{
+	position: absolute;
 	overflow: hidden;
+	height: 100%;
+	width: 100%;
+}
+#loader{
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 5;
+	text-align: center;
+	padding-top: 50%;
+	font-size: 3em;
+	color: #fefefe;
+	background: #222;
 }
 #index_img {
 	position: absolute;
